# odoo19

./: .gitignore  docker-compose.yml
addons/custom_sale_project_filter/: __manifest__.py
addons/custom_sale_project_filter/models/: __init__.py  product_product.py  product_template.py  sale_order.py
addons/custom_sale_project_filter/views/: product_template_views.xml  sale_order_views.xml
addons/dynamic_approval_workflow/i18n/: apply_vi_to_pot.py  auto_translate_vi.py  build_vi_from_pot.py  dynamic_approval_workflow.pot  fill_vi_translations.py  vi.po
addons/gia_pha_manager/: __manifest__.py
addons/gia_pha_manager/models/: __init__.py  gia_pha_event.py  gia_pha_member.py
addons/loilv_report_advanced/: __manifest__.py
addons/loilv_report_advanced/controllers/: __init__.py  base_report.py
addons/loilv_report_advanced/data/: xml_default.txt
addons/loilv_report_advanced/models/: __init__.py  ir_model.py  report_base.py  report_setup.py  status_group.py
addons/loilv_report_advanced/security/: ir.model.access.csv
addons/loilv_report_advanced/views/: report_setup.xml  status_group.xml
addons/purchase-workflow/: .copier-answers.yml  .pre-commit-config.yaml  README.md
addons/purchase-workflow/purchase_order_general_discount/: README.rst  __manifest__.py
addons/purchase-workflow/purchase_order_type/: README.rst  __manifest__.py
addons/purchase-workflow/purchase_order_type/i18n/: am.po  ar.po  bg.po  (+59 more)
addons/purchase-workflow/purchase_request/: README.rst  __manifest__.py
addons/purchase-workflow/setup/_metapackage/: pyproject.toml
config/: odoo.conf
(+24 files in other folders)
