[project]
name = "odoo-addons-oca-purchase-workflow"
version = "19.0.20260203.0"
dependencies = [
    "odoo-addon-product_supplier_code_purchase==19.0.*",
    "odoo-addon-purchase_allowed_product==19.0.*",
    "odoo-addon-purchase_force_invoiced==19.0.*",
    "odoo-addon-purchase_order_general_discount==19.0.*",
    "odoo-addon-purchase_order_owner==19.0.*",
    "odoo-addon-purchase_order_type==19.0.*",
    "odoo-addon-purchase_order_weight_volume==19.0.*",
    "odoo-addon-purchase_request==19.0.*",
    "odoo-addon-purchase_stock_price_unit_sync==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
